[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "lysin"
version = "0.2.0"
description = ""
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Terry Li"}]
requires-python = ">=3.11"
keywords = ["mcp", "vivesca", "lysin"]

dependencies = [
    "fastmcp>=2.0",

]

[project.urls]
Repository = "https://github.com/vivesca/lysin"

[project.scripts]
lysin = "lysin.server:main"

[dependency-groups]
dev = ["pytest>=9"]
