[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "lysin"
version = "0.2.0"
description = "Cell biology term lookup — verify naming before building (UniProt, Reactome, Wikipedia)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Terry Li"}]
requires-python = ">=3.11"
keywords = ["mcp", "biology", "uniprot", "reactome", "wikipedia", "naming"]

dependencies = [
    "click>=8",
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/vivesca/lysin"

[project.scripts]
lysin = "lysin.server:main"

[dependency-groups]
dev = ["pytest>=9"]
